# 3DFrontBench

./: .env.template  .gitignore  README.md  TODO.md  download_dataset.py  pyproject.toml  render_glb.py  requirements.txt
assets/: BoundingBoxes.glb  cam.json  camera.json  camera_params.json  camera_params_livingroom.json  sample_scene.json  scene.glb
dataset/: 09d742d0-9e99-4e31-ac3d-ad1879cf691b_LivingDiningRoom-9326_bbox.glb  09d742d0-9e99-4e31-ac3d-ad1879cf691b_LivingDiningRoom-9326_camera.json  09d742d0-9e99-4e31-ac3d-ad1879cf691b_LivingDiningRoom-9326_metadata.json  0f661df2-0f41-47a4-830c-7444f4a33a03_LivingDiningRoom-12554_bbox.glb  0f661df2-0f41-47a4-830c-7444f4a33a03_LivingDiningRoom-12554_metadata.json  103cce55-24d5-4c71-9856-156962e30511_LivingDiningRoom-89516_bbox.glb  103cce55-24d5-4c71-9856-156962e30511_LivingDiningRoom-89516_camera.json  103cce55-24d5-4c71-9856-156962e30511_LivingDiningRoom-89516_metadata.json  109a8e42-f7d7-4893-8262-f2030072b760_LivingRoom-38165_bbox.glb  109a8e42-f7d7-4893-8262-f2030072b760_LivingRoom-38165_camera.json  109a8e42-f7d7-4893-8262-f2030072b760_LivingRoom-38165_metadata.json  109c84cd-7194-4b1d-ac52-8d1862565c6c_Corridor-20684_bbox.glb  109c84cd-7194-4b1d-ac52-8d1862565c6c_Corridor-20684_metadata.json  10e2d93c-2a82-49f2-a95c-7598d24901f2_LivingDiningRoom-8149_bbox.glb  10e2d93c-2a82-49f2-a95c-7598d24901f2_LivingDiningRoom-8149_camera.json  10e2d93c-2a82-49f2-a95c-7598d24901f2_LivingDiningRoom-8149_metadata.json  1ad74b11-777a-4610-a249-7c5e044a0f01_LivingDiningRoom-10290_bbox.glb  1ad74b11-777a-4610-a249-7c5e044a0f01_LivingDiningRoom-10290_camera.json  1ad74b11-777a-4610-a249-7c5e044a0f01_LivingDiningRoom-10290_metadata.json  1ad74b11-777a-4610-a249-7c5e044a0f01_MasterBedroom-14403_bbox.glb  1ad74b11-777a-4610-a249-7c5e044a0f01_MasterBedroom-14403_metadata.json  1f077e24-2eca-43ca-bc92-1b36eab99467_LivingDiningRoom-180855_bbox.glb  1f077e24-2eca-43ca-bc92-1b36eab99467_LivingDiningRoom-180855_metadata.json  2e422478-2de0-4d16-b398-657b07c1cac0_LivingDiningRoom-4293_bbox.glb  2e422478-2de0-4d16-b398-657b07c1cac0_LivingDiningRoom-4293_metadata.json  (+48 more)
notebooks/: 3d_front_rendering.ipynb  (+25 more)
(+602 files in other folders)
