[project]
name = "dlinvc"
version = "0.1.0"
description = ""
authors = [{ name = "jonathansickert", email = "sickert.jonathan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["google-generativeai (>=0.8.6,<0.9.0)"]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = ["isort (>=8.0.1,<9.0.0)", "ipykernel (>=7.2.0,<8.0.0)"]
