[project]
name = "dlinvc"
version = "0.1.0"
description = ""
authors = [{ name = "jonathansickert", email = "sickert.jonathan@gmail.com" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai (>=2.2.0,<3.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "trimesh (>=4.12.2,<5.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "h5py (>=3.16.0,<4.0.0)",
    "pyrender (>=0.1.45,<0.2.0)",
    "scipy (>=1.17.1,<2.0.0)",
    "pandas (>=3.0.3,<4.0.0)",
    "huggingface-hub (>=1.14.0,<2.0.0)",
    "blenderproc (>=2.8.0,<3.0.0)",
]

[tool.poetry]
package-mode = true
packages = [{ include = "dlinvc", from = "src" }]

[tool.ruff]
target-version = "py311"
line-length = 120


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "isort (>=8.0.1,<9.0.0)",
    "ipykernel (>=7.2.0,<8.0.0)",
    "ruff (>=0.15.12,<0.16.0)",
]
